--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,25 +1,48 @@
 body {
-    border: 1px solid red;
-    font-size: 16px;
-    margin: 0px auto;
-    max-width: 1024px;
-
+  border: 1px solid red;
+  font-size: 16px;
+  margin: 0px auto;
+  max-width: 1024px;
 }
+
+footer {
+    border: 1px dotted blue;
+}
+
+header img {
+  border-radius: 500px;
+  width: 100px;
+}
+
 header nav ul {
-    text-align: center;
-    
+  text-align: center;
 }
 header nav ul li {
-    background-color: blue;
-    color: white;
-    border: 1px solid blue;
-    display: inline-block;
-    margin-right: 20px;
-    padding: 16px 26px;
-
+  background-color: blue;
+  border-radius: 5px;
+  box-shadow: 0px 0px 20px black;
+  color: white;
+  border: 1px solid blue;
+  display: inline-block;
+  margin-right: 20px;
+  padding: 16px 26px;
 }
 
 header nav ul li:hover {
-    background-color: white;
-    color: blue;
+  background-color: white;
+  box-shadow: 0px 0px 0px white;
+  color: blue;
+}
+
+/* otra forma
+main section {
+    display: flex;
+    grid-template-columns: repeat(3,fr);
+} */
+
+main section article {
+  border: 1px solid blue;
+  display: inline-block;
+  width: 32.8%;
+  vertical-align: top;
 }
