--- a/practica01css/css/estilos.css
+++ b/practica01css/css/estilos.css
@@ -1,11 +1,25 @@
 body {
-  font-size: 16px;
+  font-size: 16px; /* 1em */
   max-width: 1024px;
   margin: 0px auto;
+  --color-fondo-header: #d1e3ee;
+}
+
+footer {
+  background: black;
+  margin-top: 15px;
+}
+footer article {
+  display: inline-block;
+  width: 32.8%;
+  color: white;
+  height: 100px;
+  padding: 30px;
 }
 
 header {
-  background: #d1e3ee;
+  background: var(--color-fondo-header);
+  /* margin-bottom: 15px; */
 }
 
 header nav {
@@ -14,6 +28,15 @@ header nav {
   padding: 2px 0px;
   width: 99%;
   border-radius: 5px;
+}
+
+header nav form input {
+  border-radius: 5px;
+}
+header nav form input[type="submit"] {
+  background: green;
+  border: 1px solid green;
+  color: white;
 }
 
 header nav form {
@@ -30,4 +53,41 @@ header nav ul li {
 
 #logo {
   margin-top: -150px;
+}
+
+#seccion01 {
+  margin-top: 15px;
+}
+#seccion01 article {
+  text-align: center;
+}
+#seccion01 article img {
+  border: 5px solid rgba(150, 150, 150, 0.5);
+  width: 98%;
+}
+
+#seccion02 article {
+  display: inline-block;
+  vertical-align: top;
+  width: 32.8%;
+}
+
+#seccion02 article input[type="submit"] {
+  background: white;
+  color: blue;
+  padding: 5px 15px;
+  border-radius: 5px;
+  margin-left: 35%;
+}
+
+.nito {
+  font-weight: bold;
+}
+
+.otraSeccion {
+  font-size: 2.5em;
+}
+
+.unaSeccion {
+  font-size: 4.5rem; /* 4.5 X 16 */
 }
